syntax = "proto3";
package proto;
import "google/protobuf/struct.proto";

option go_package = ".;proto";

service TransformerService{
  rpc Transform(TransformRequest) returns (TransformResponse);
}

message TransformRequest{
  repeated TransformerEvent events = 1;
}

message TransformResponse{
  repeated Response response = 1;
}

message Response{
  google.protobuf.Struct output = 1;
  Metadata metadata = 2;
  int32 status_code = 3;
  string error = 4;
  ValidationError validation_error = 5;
}

message ValidationError {
  string type = 1;
  string message = 2;
  map<string, string> meta = 3;
}

message TransformerEvent{
  google.protobuf.Struct message = 1;
  Metadata metadata = 2;
  Destination destination = 3;
  repeated Library libraries = 4;
}

message Metadata {
  string source_id = 1;
  string source_name = 2;
  string workspace_id = 3;
  string namespace = 4;
  string instance_id = 5;
  string source_type = 6;
  string source_category = 7;
  string tracking_plan_id = 8;
  int32 tracking_plan_version = 9;
  string destination_id = 10;
  int64 job_id = 11;
  string source_job_id = 12;
  string source_job_run_id = 13;
  string source_task_run_id = 14;
  string destination_type = 15;
  string message_id = 16;
  string oauth_access_token = 17;
  string trace_parent = 18;
  repeated string message_ids = 19;
  string rudder_id = 20;
  string received_at = 21;
  string event_name = 22;
  string event_type = 23;
  string source_definition_id = 24;
  string destination_definition_id = 25;
  string transformation_id = 26;
  string transformation_version_id = 27;
}

message Destination {
  string id = 1;
  string name = 2;
  bool enabled = 3;
  string workspace_id = 4;
  bool is_processor_enabled = 5;
  string revision_id = 6;
}

message Library{
  string version_id = 1;
}
